fixed whitespace

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,7 @@ $breakpoint arguments:
 
 html {
   font-size: 62.5%;
+  background-color: #f7f7f7;
 }
 @media (min-width: 112.5em) {
   html {
