--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -6,6 +6,7 @@
 
 html {
   font-size: 62.5%;
+  background-color: $color-light-grey-1;
 
   @include responsive(big-desktop){
     font-size: 75%;
